examples/failing/OverlappingArguments.purs
-- @shouldFailWith OverlappingArgNames
module OverlappingArguments where

import Prelude

f x x = x
